--- a/style.css
+++ b/style.css
@@ -1172,6 +1172,7 @@ i {
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
 }
 .why__we__item span{
   font-family: 'Montserrat';
@@ -1186,6 +1187,7 @@ i {
   position: relative;
   height: 350px;
   display: flex;
+  width: 100%;
   justify-content: center;
 }
 .why__we__main__img{
@@ -2617,4 +2619,51 @@ label.hidden__filter__characteristic__checkbox__checked::before {
 }
 .show{
     display: flex;
+}
+.round__slider__legs{
+  --round-slider-bar-color: #DEB765;
+  position: absolute;
+  width: 100%;
+  bottom: 20px;
+  z-index: 999;
+}
+.round__slider__seats{
+  --round-slider-bar-color: #DEB765;
+  width: 100%;
+  position: absolute;
+  z-index: 999;
+}
+
+.legs__img__wrap img,
+.backs__img__wrap img{
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  position: absolute;
+  -webkit-transition: all .2s ease-in-out;
+  -moz-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+
+}
+.legs__img__wrap,
+.backs__img__wrap{
+  position: absolute;
+  bottom: 10px;
+  height: 350px;
+  width: 300px;
+}
+.legs__item .why__we__img__wrap,
+.backs__item .why__we__img__wrap{
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+.why__we__img__active{
+  opacity: 1 !important;
+  -webkit-transition: all .2s ease-in-out;
+  -moz-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
 }
